After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 635843 - [rtph264depay] segfault on empty payload
[rtph264depay] segfault on empty payload
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal blocker
: 0.10.26
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-11-26 11:23 UTC by Thijs Vermeir
Modified: 2010-11-26 23:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtp_h264.gdp (65.62 KB, application/octet-stream)
2010-11-26 11:24 UTC, Thijs Vermeir
  Details
rtph264depay: fix segfault on empty payload (833 bytes, patch)
2010-11-26 14:02 UTC, Thijs Vermeir
committed Details | Review

Description Thijs Vermeir 2010-11-26 11:23:48 UTC
The attached file gives a race condition in rtph264depay. Sometimes the pipeline failes with a segfault, otherwhise it correctly goes to EOS.

gst-launch filesrc location=rtp_h264.gdp ! gdpdepay ! rtph264depay ! fakesink
Comment 1 Thijs Vermeir 2010-11-26 11:24:32 UTC
Created attachment 175306 [details]
rtp_h264.gdp
Comment 2 Thijs Vermeir 2010-11-26 14:02:00 UTC
Created attachment 175313 [details] [review]
rtph264depay: fix segfault on empty payload
Comment 3 Tim-Philipp Müller 2010-11-26 23:46:12 UTC
Pushed, thanks for the patch and test case!

 commit e7b1655069fe2f03daf9e53b865bc110bd3c5131
 Author: Thijs Vermeir <thijsvermeir@gmail.com>
 Date:   Fri Nov 26 15:00:29 2010 +0100

    rtph264depay: fix segfault on empty payload
    
    https://bugzilla.gnome.org/show_bug.cgi?id=635843