rtph264depay: fix segfault on empty payload

https://bugzilla.gnome.org/show_bug.cgi?id=635843